--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,7 +10,7 @@ on:
       - .github/workflows/docker-build.yml
   workflow_dispatch:
   schedule:
-    - cron: '0 0 1 * *'
+    - cron: "0 0 1 * *"
 
 jobs:
   build:
@@ -33,11 +33,9 @@ jobs:
 
       - name: Set ENV Variables
         run: |
-          IMG="docker-python-base"
-          OWNER="$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')"
+          IMG="$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')"
           echo "BUILD_VER=debian-11-slim" >> $GITHUB_ENV
-          echo "IMG=${IMG}" >> $GITHUB_ENV
-          echo "IMAGE=${OWNER}/${IMG}" >> $GITHUB_ENV
+          echo "IMAGE=${IMG}" >> $GITHUB_ENV
           echo "GIT_SHA=$$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
           echo "BUILD_DATE=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
           echo "GIT_REF=$(git symbolic-ref -q --short HEAD || git describe --tags --exact-match)" >> $GITHUB_ENV
