--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,17 +9,20 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
+  get-repo-info:
+    uses: divkix/reusable-workflows/.github/workflows/get-repo-info.yml@main
+
   build-docker:
+    needs: get-repo-info
     uses: divkix/reusable-workflows/.github/workflows/docker-build-publish.yml@main
     with:
       repo_name: ${{ needs.get-repo-info.outputs.repo_name }}
-    secrets: inherit
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
   automerge-dependabot-pr:
     if: github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'
-    needs:
-      - build-docker
-    permissions:
-      pull-requests: write
-      contents: write
+    needs: build-docker
     uses: divkix/reusable-workflows/.github/workflows/automerge-dependabot-pr.yml@main
