--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
   update-description:
     name: Update DockerHub Description
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-docker
     steps:
       - uses: actions/checkout@v3
       - name: Docker Hub Description
